added: reset & normalize css

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,6 @@
 //core
+@import "common/core/reset";
+@import "common/core/normalize";
 @import "common/core/variables";
 @import "common/core/responsive";
 @import "common/core/base";
