--- a/src/scss/common/core/_base.scss
+++ b/src/scss/common/core/_base.scss
@@ -3,9 +3,7 @@
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  scrollbar-width: 4px;
-  scrollbar-color: #e0e1eb;
-  font-family: 'Roboto';
+  font-family: 'Gilroy';
   font-size: $font-size-16;
   color: $black;
   font-weight: 400;
@@ -21,5 +19,23 @@
   &::-webkit-scrollbar-thumb {
     background-color: #e0e1eb;
     border-radius: 777px;
+  }
+}
+
+body {
+  min-height: 100vh;
+}
+
+.container {
+  width: 100%;
+  max-width: 1272px;
+  padding: 0 1rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+
+  @include lg {
+    max-width: 100vw;
+    margin: 0;
   }
 }
