--- a/src/scss/common/core/_fonts.scss
+++ b/src/scss/common/core/_fonts.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('/src/fonts/stylesheet.css');
 
 @mixin font-normal {
-  font-family: 'Roboto';
+  font-family: 'Gilroy';
   font-style: normal;
   font-weight: 400;
 }
@@ -43,7 +44,7 @@
 @mixin h__h1 {
   font-size: $h1;
   font-weight: 700;
-  line-height: 47px;
+  line-height: 140%;
 
   @include md {
     @include h__h2;
@@ -99,7 +100,7 @@
 @mixin body-XS {
   font-size: $font-size-12;
   font-weight: 400;
-  line-height: 14px;
+  line-height: 120%;
 }
 
 @mixin body-XS_medium {
@@ -117,7 +118,7 @@
 @mixin text__text7 {
   font-size: $font-size-16;
   font-weight: 400;
-  line-height: 19px;
+  line-height: 120%;
 }
 
 h1 {
